Fixed problem of text being cut off

--- a/src/react-files/components/sections/TwoColumnSection.css
+++ b/src/react-files/components/sections/TwoColumnSection.css
@@ -3,7 +3,7 @@
 
 .two-column-section {
   padding: 4rem 0;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
 
 @media (min-width: 768px) {
